pages.py: arguments

--- a/joker/flasky/templates/upload.html
+++ b/joker/flasky/templates/upload.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>upload@yc-storage</title></head>
+    <title>{{ title }}</title></head>
 <body>
 <form method="POST" enctype="multipart/form-data">
     <label for="file">{{ label or "Choose a file to upload" }}</label>
