--- a/joker/flasky/templates/login.html
+++ b/joker/flasky/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>login@yc-storage</title></head>
+    <title>{{ title }}</title></head>
 <body>
 <form method="POST">
     <label for="username">Username</label>
