--- a/joker/flasky/templates/login.html
+++ b/joker/flasky/templates/login.html
@@ -11,5 +11,26 @@
     <input type="password" id="password" name="password" value="{{ password }}">
     <button>Submit</button>
 </form>
+{% if usejson %}
+    <pre><code id="resp"></code></pre>
+    <script>
+        document.addEventListener('submit', function (event) {
+            event.preventDefault();
+            let d = {};
+            (new FormData(event.target)).forEach(function (v, k) {
+                d[k] = v;
+            });
+            window.fetch(window.location, {
+                method: 'POST',
+                body: JSON.stringify(d),
+                headers: {'Content-type': 'application/json; charset=UTF-8'}
+            }).then(function (resp) {
+                resp.json().then(function (data) {
+                    document.getElementById('resp').innerText = JSON.stringify(data, null, 4);
+                });
+            })
+        });
+    </script>
+{% endif %}
 </body>
 </html>
