--- a/joker/flasky/templates/help.html
+++ b/joker/flasky/templates/help.html
@@ -5,10 +5,13 @@
     <title>Help</title>
     <style>
         html {
-            max-width: 1000px;
+            max-width: 800px;
             margin: auto;
             font-size: 18px;
             line-height: 30px;
+        }
+        h4 {
+            margin: 30px 0 0;
         }
 
         pre {
@@ -18,11 +21,8 @@
             border-radius: 6px;
         }
 
-        h4 {
-            margin: 30px 0 0;
-        }
         code {
-            font-family: "Courier New", Courier, FangSong, STFangsong, STZhongsong, SimSun, monospace;
+            font-family: "Courier New", Courier, SimSun, monospace;
         }
     </style>
 </head>
