--- a/joker/flasky/templates/upload.html
+++ b/joker/flasky/templates/upload.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ title }}</title></head>
+<style>
+    body {
+        margin: auto;
+        max-width: 800px;
+        font-size: 17px;
+        line-height: 26px;
+    }
+    input {
+        border: 1px solid rgba(64, 64, 64, .64);
+        padding: 2px;
+        border-radius: 2px;
+    }
+</style>
 <body>
 <form method="POST" enctype="multipart/form-data">
     <label for="file">{{ label or "Choose a file to upload" }}</label>
