add ViewEntry.{methods,paths,to_json_serializable()}; ViewEntry.get_all type hint; help.html: add ctx var font_family

--- a/joker/flasky/templates/help.html
+++ b/joker/flasky/templates/help.html
@@ -9,7 +9,9 @@
             margin: auto;
             font-size: 18px;
             line-height: 30px;
+            font-family: {{ font_family or '"Courier New", Courier, monospace' }};
         }
+
         h4 {
             margin: 30px 0 0;
         }
